// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should tokenize and stem correctly in dutch 1`] = `
Array [
  "de",
  "klein",
  "koei",
]
`;

exports[`Should tokenize and stem correctly in dutch 2`] = `
Array [
  "ik",
  "heb",
  "wat",
  "taart",
  "gemaakt",
]
`;

exports[`Should tokenize and stem correctly in english 1`] = `
Array [
  "the",
  "quick",
  "brown",
  "fox",
  "jump",
  "over",
  "lazi",
  "dog",
]
`;

exports[`Should tokenize and stem correctly in english 2`] = `
Array [
  "I",
  "bake",
  "some",
  "cake",
]
`;

exports[`Should tokenize and stem correctly in french 1`] = `
Array [
  "voyon",
  "quel",
  "temp",
  "il",
  "fait",
  "dehor",
]
`;

exports[`Should tokenize and stem correctly in french 2`] = `
Array [
  "j",
  "ai",
  "fait",
  "de",
  "g",
  "teau",
]
`;

exports[`Should tokenize and stem correctly in italian 1`] = `
Array [
  "ho",
  "cucin",
  "dell",
  "tort",
]
`;

exports[`Should tokenize and stem correctly in italian 2`] = `
Array [
  "dorm",
  "una",
  "cos",
  "difficil",
  "quand",
  "i",
  "test",
  "non",
  "pass",
]
`;

exports[`Should tokenize and stem correctly in norwegian 1`] = `
Array [
  "jeg",
  "kokt",
  "noen",
  "kak",
]
`;

exports[`Should tokenize and stem correctly in norwegian 2`] = `
Array [
  "sov",
  "er",
  "en",
  "vansk",
  "ting",
  "n",
  "r",
  "test",
  "mislykk",
]
`;

exports[`Should tokenize and stem correctly in portugese 1`] = `
Array [
  "eu",
  "cozinh",
  "alguns",
  "bol",
]
`;

exports[`Should tokenize and stem correctly in portugese 2`] = `
Array [
  "dorm",
  "uma",
  "cois",
  "dif",
  "cil",
  "quand",
  "os",
  "test",
  "falh",
]
`;

exports[`Should tokenize and stem correctly in russian 1`] = `
Array [
  "я",
  "приготов",
  "пирожн",
]
`;

exports[`Should tokenize and stem correctly in russian 2`] = `
Array [
  "спат",
  "трудн",
  "когд",
  "тест",
  "не",
  "срабатыва",
]
`;

exports[`Should tokenize and stem correctly in spanish 1`] = `
Array [
  "cocin",
  "unos",
  "pastel",
]
`;

exports[`Should tokenize and stem correctly in spanish 2`] = `
Array [
  "dorm",
  "es",
  "algo",
  "dificil",
  "cuand",
  "las",
  "prueb",
  "fall",
]
`;

exports[`Should tokenize and stem correctly in swedish 1`] = `
Array [
  "jag",
  "lag",
  "n",
  "gra",
  "kak",
]
`;

exports[`Should tokenize and stem correctly in swedish 2`] = `
Array [
  "att",
  "sov",
  "r",
  "en",
  "sv",
  "sak",
  "n",
  "test",
  "misslyck",
]
`;
